# rust-demos

./: .gitignore  README.md
adder/: Cargo.toml
adder/benches/: my_benchmark.rs
adder/src/: lib.rs
adder/tests/: integration_test.rs
advanced/: Cargo.toml
advanced/src/: async_test.rs  cell_lock.rs  closure.rs  concurrent.rs  data_package.rs  iterator.rs  lifecycle.rs  loopref.rs  main.rs  mpsc_test.rs  mutex_test.rs  other.rs  ptr.rs  thread_test.rs  types.rs
advanced/src/helpers/: logger.rs
basic/src/: arr.rs  func.rs  lib.rs  string.rs  var.rs
logs/: Cargo.toml
logs/src/: main.rs
minigrep/: README.md  poem.txt
minigrep/src/: lib.rs  main.rs
minigrep/tests/: search_test.rs
protobuf_test/: Cargo.toml
protobuf_test/src/: main.rs
rcli/: Cargo.toml
rcli/src/: logger.rs  main.rs  utils.rs
rcli/src/application/: cli.rs
rcli/src/application/cli/: cli.rs  mod.rs
rcli/src/application/cli/commands/: kill.rs  mod.rs
rcli/src/commands/: inquire_test.rs  mod.rs
rcli/src/configs/: consts.rs
rcli/src/helpers/: logger.rs  mod.rs  tracing_log.rs
rcli/src/utils/: mod.rs  process.rs  text.rs
rcli/tests/: simple_log_test.rs  tracing_test.rs
server/: Cargo.toml  README.md  build.rs
server/configs/: dev.yml
server/src/: bootstrap.rs  main.rs  routes.rs
server/src/grpc/: client.rs
server/src/handlers/: test.rs
server/src/helpers/: logger_helper.rs  mod.rs  mysql_helper.rs  redis_helper.rs
server/src/kafka/: consumer.rs  producer.rs
server/src/macros/: mod.rs
server/src/models/: user.rs
server/src/services/: config.rs  logger.rs  mod.rs  query.rs
server/src/socket/: socket.rs
server/src/utils/: mod.rs  process.rs  regex_util.rs  text.rs
server/tests/: axum_test.rs  http_req.http  protobuf_test.rs  type_test.rs
web/: 404.html  Cargo.toml
web/src/: lib.rs  main.rs  thread_pool.rs
