[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
authors = ["haokur"]

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
inquire = "0.7.5"
simplelog = "0.12.2"
log = "0.4.27"
regex = "1.11.1"
ctrlc = "3.4.5"
sysinfo = "0.34.2"
time = { version = "0.3.41", features = ["formatting", "macros"] }
flexi_logger = "0.30.0"
chrono = "0.4.40"
lazy_static = "1.5.0"