[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
authors = ["haokur"]

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
inquire = "0.7.5"
simplelog = "0.12.2"
log = "0.4.27"
regex = "1.11.1"
ctrlc = "3.4.5"
sysinfo = "0.34.2"
time = { version = "0.3.41", features = ["formatting", "macros"] }
flexi_logger = {version = "0.30.1",features = ["trc"]}
chrono = "0.4.40"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json","chrono"] }
tracing-log = "0.2.0"
tracing-test = "0.2.5"
tokio = {version = "1.44.1", features = ["full"]}
serde = {version = "1.0.219", features = ["derive"]}
tracing-appender = "0.2.3"
once_cell = "1.21.3"
