[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.15"
axum = "0.8.3"
sqlx = "0.8.3"
redis_rs = "0.9.0"
kafka = "0.10.0"
tokio-tungstenite = "0.26.2"
tonic = "0.13.0"
tokio = { version = "1.44.2", features = ["full", "rt-multi-thread"] }
serde = "1.0.219"
prost = "0.13.5"
serde_yaml = "0.9.33"
toml = "0.8.20"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"