[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.15"
axum = "0.8.3"
config = "0.15.11"
sqlx = {version = "0.8.3", features = ["mysql", "time","runtime-tokio-native-tls"]}
redis = {version = "0.29.5", features = ["tokio-comp"] }
kafka = "0.10.0"
tokio-tungstenite = "0.26.2"
tonic = "0.13.0"
tokio = { version = "1.44.2", features = ["full", "rt-multi-thread"] }
serde = "1.0.219"
prost = "0.13.5"
serde_yaml = "0.9.33"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace","cors"] }
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"
lazy_static = "1.5.0"