[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.15"
axum = { version = "0.8.3", features = ["ws"] }
config = "0.15.11"
sqlx = {version = "0.8.3", features = ["mysql", "time","runtime-tokio-native-tls"]}
redis = {version = "0.29.5", features = ["tokio-comp"] }
rdkafka = { version = "0.34", features = ["tokio"] }
tonic = "0.13.0"
tokio = { version = "1.44.2", features = ["macros", "sync", "full", "rt-multi-thread"] }
serde = "1.0.219"
prost = "0.13.5"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace","cors"] }
serde_json = "1.0.140"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json","chrono"] }
lazy_static = "1.5.0"
tonic-build = "0.13.0"
tokio-stream = "0.1.17"
tracing = "0.1.41"

tracing-appender = "0.2.3"
regex = "1.11.1"
sysinfo = "0.34.2"
ctrlc = "3.4.6"

[build-dependencies]
tonic-build = "0.13.0"
prost-build = "0.13.5"